<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:scaleType="centerInside"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/img_item_photo"
            android:textSize="30sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/img_item_photo"
            tools:text="@string/item_name" />

        <TextView
            android:id="@+id/tv_item_accreditation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            tools:text="@string/item_price" />
        <TextView
            android:id="@+id/tv_item_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_accreditation"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_accreditation"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_accreditation"
            tools:text="@string/item_description" />

        <TextView
            android:id="@+id/txt_topic_learned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:text="@string/title_spec"
            android:textStyle="bold"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_history"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_history"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_history" />

        <TextView
            android:id="@+id/tv_item_topic_learned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:textSize="15sp"
            card_view:layout_constraintEnd_toEndOf="@+id/txt_topic_learned"
            card_view:layout_constraintStart_toStartOf="@+id/txt_topic_learned"
            card_view:layout_constraintTop_toBottomOf="@+id/txt_topic_learned"
            tools:text="@string/item_specification" />

        <Button
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_topic_learned"
            android:text="@string/share" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
